fixed scrollbar from growing when zooming in

--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@
 
 /* Custom Scrollbar */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0.5vw;
+  max-width: 10px;
 }
 
 ::-webkit-scrollbar-track {
